--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "fs-extra": "^10.1.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
+    "mysqldump": "^3.2.0",
     "password-validator": "^5.3.0"
   },
   "devDependencies": {
